# sortnetutils

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh
cmake/: macros.cmake  sortnetutilsConfig.cmake.in
examples/: CMakeLists.txt  example.cpp
include/: sortnetutils.h
src/: CE.h  CMakeLists.txt  FactoredOutputSet.cpp  FactoredOutputSet.h  Network.cpp  Network.h  NetworkVerifier.h  NetworkVerifierV2.cpp  NetworkVerifierV2.h  OutputSet.cpp  OutputSet.h  exec.cpp  exec.h  format.cpp  format.h  layers.cpp  layers.h  parse.cpp  parse.h  permute.cpp  permute.h  random.cpp  random.h  square.cpp  symmetry.cpp  symmetry.h  tikz.cpp  tikz.h
tests/: CMakeLists.txt  tests.cpp
